[gd_scene load_steps=3 format=3 uid="uid://ldit7w1t2rue"]

[ext_resource type="Script" path="res://scripts/escape_menu.gd" id="1_wwqdf"]
[ext_resource type="Script" path="res://scripts/v_slider.gd" id="2_nxvti"]

[node name="MenuEscape" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00775)
script = ExtResource("1_wwqdf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -495.0
offset_top = -266.0
offset_right = 495.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LabelGenerales" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ajustes generales"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelsAjustes" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelResolucion" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LabelsAjustes"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolución "
horizontal_alignment = 1

[node name="LabelSonido" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LabelsAjustes"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sonido"
horizontal_alignment = 1

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Controladores" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContainerResolucion" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores/ContainerResolucion"]
layout_mode = 2
size_flags_vertical = 0
text = "Resolución"

[node name="Control4" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores/ContainerResolucion"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="OptionResolucion" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores/ContainerResolucion"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores/ContainerResolucion/OptionResolucion"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores/ContainerResolucion"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="SliderMusica" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores/SliderMusica"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores/SliderMusica"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
text = "Música"

[node name="Control5" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores/SliderMusica"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores/SliderMusica"]
custom_minimum_size = Vector2(20, 30)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
script = ExtResource("2_nxvti")

[node name="Control4" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Controladores/SliderMusica"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="FullScreenYEfectos" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FullScreenCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/FullScreenYEfectos"]
layout_mode = 2
text = "FullScreen
"

[node name="ContainerEfectos" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FullScreenYEfectos"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/FullScreenYEfectos/ContainerEfectos"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control6" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/FullScreenYEfectos/ContainerEfectos"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FullScreenYEfectos/ContainerEfectos"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
text = "Efectos
"

[node name="Control5" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/FullScreenYEfectos/ContainerEfectos"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/FullScreenYEfectos/ContainerEfectos"]
custom_minimum_size = Vector2(20, 30)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0

[node name="Control4" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/FullScreenYEfectos/ContainerEfectos"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GuardarPartida" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Guardar partida
"

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_vertical = 8

[node name="SalirMenuPrincipal" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volver al menu principal"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/Controladores/ContainerResolucion/OptionResolucion/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/Controladores/SliderMusica/VSlider" to="." method="_on_v_slider_value_changed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/FullScreenYEfectos/FullScreenCheckBox" to="." method="_on_full_screen_check_box_toggled"]
